cargo-features = ["edition2024"]

[package]
name = "msparking"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
chrono = "0.4.41"
chrono-tz = "0.10.3"
config = "0.15.11"
env_logger = "0.11.8"
futures = "0.3.31"
influxdb2 = "0.5.2"
log = "0.4.27"
reqwest = { version = "0.12.15", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }
